# rapidstream-tapa

./: .actrc  .bazelignore  .bazelrc  .clang-format  .clangd  .cmake-format.py  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  BUILD.bazel  CLA.md  CMakeLists.txt  Dockerfile.centos.7  LICENSE  MODULE.bazel  README.md  VARS.bzl  VERSION  format.sh  install-and-test.sh  install.sh  pyproject.toml
apps/bandwidth/: CMakeLists.txt  bandwidth-frt.cpp  bandwidth-host.cpp  bandwidth.cpp  bandwidth.h  lfsr.h  link_config.ini  run_tapa.sh  slr.tcl
apps/cannon/: CMakeLists.txt  cannon-frt.cpp  cannon-host.cpp  cannon.cpp  link_config.ini  run_tapa.sh
apps/gemv/: CMakeLists.txt  gemv-host.cpp  gemv.cpp  gemv.h  link_config.ddr.ini  link_config.hbm.ini
apps/graph/: CMakeLists.txt  graph-frt.cpp  graph-host.cpp  graph.cpp  link_config.ini  nxgraph.hpp
apps/jacobi/: CMakeLists.txt  jacobi-frt.cpp  jacobi-host.cpp  jacobi.cpp  link_config.ini  run_tapa.sh
apps/nested-vadd/: CMakeLists.txt  link_config.ini  run_tapa.sh  vadd-host.cpp  vadd.cpp
apps/network/: CMakeLists.txt  link_config.ini  network-host.cpp  network.cpp  run_tapa.sh
apps/page-rank/: CMakeLists.txt  README.md  directive.json  page-rank-frt.cpp  page-rank-host.cpp  page-rank-kernel.h  page-rank.cpp  page-rank.h  slr.tcl
apps/shared-vadd/: CMakeLists.txt  link_config.ini  run_tapa.sh  vadd-host.cpp  vadd.cpp
apps/vadd/: CMakeLists.txt  link_config.ini  run_tapa.sh  vadd-frt.cpp  vadd-host.cpp  vadd.cpp
backend/: CMakeLists.txt  tapacc.cpp  tarocc.cpp  tlpc.cpp  tlpcc.cpp
backend/clang/: Attr.td  PPDirectives.cpp  Preprocessor.cpp  Preprocessor.h  SemaDeclAttr.cpp  SemaStmtAttr.cpp
backend/python/: .gitignore  MANIFEST.in  setup.cfg  setup.py  tlp.py  tlpc  tlpv
backend/python/tapa/: __init__.py  autobridge.py  bitstream.py  (+13 more)
backend/tapa/: async_mmap.cpp  async_mmap.h  mmap.cpp  mmap.h  stream.cpp  stream.h  task.cpp  task.h  type.cpp  type.h
backend/tlp/: async_mmap.cpp  async_mmap.h  mmap.cpp  mmap.h  stream.cpp  stream.h  task.cpp  task.h  type.cpp  type.h
bazel/: BUILD.bazel  binutils.BUILD.bazel  dependencies.bzl  doctest_wrapper.py  dpi_rules.bzl  header_extractor.bzl  nuitka_rules.bzl  nuitka_wrapper.py  pytest_rules.bzl  pytest_wrapper.py  tapa_rules.bzl  v++.sh  v++_env.sh  v++_rules.bzl  vitis_hls_env.sh  xsc_legacy_rdi.sh  xsc_xv.sh
docs/: CMakeLists.txt  Doxyfile.in  __init__.py  api.rst  async_mmap.rst  autobridge.rst  build.sh  conf.py  example.rst  fccm_2022.rst  getting_started.rst  index.rst  installation.rst  overview.md  rapidstream.rst  requirements.txt  tapac.md  tlpc.md  tutorial.rst  vitis.rst
docs/dev/: build.rst  contributing.rst  development.rst  release.rst
docs/figures/: async_mmap_figures.pptx  fast_cosim.pptx
docs/overview/: known-issues.rst  output_file_organization.rst  overview.md  overview.rst  tapa_basics.rst  tapac.rst  vs-state-of-the-art.md
docs/rapidstream/: device.rst  dse.rst  floorplan.rst  getting_started.rst  pipeline.rst
docs/ref/: api.rst  output_file_organization.rst
docs/tutorial/: async_mmap.rst  autobridge.rst  custom_rtl.rst  debug_tips.rst  example.rst  fast_cosim.rst  floorplan_dse_compile.rst  getting_started_vadd.rst  migrate_from_vitis_hls.rst  mini_example.rst  realworld_example.rst
docs/user/: cheatsheet.rst  cosim.rst  data.rst  faq.rst  getting_started.rst  installation.rst  intro.rst  rapidstream.rst  tasks.rst  visualizer.rst  vitis.rst
fpga-runtime/: BUILD.bazel
fpga-runtime/frt/: buffer.h  buffer_arg.h  device.h  stream.h  stringify.cpp  stringify.h  stringify_test.cpp  zip_file.h
fpga-runtime/src/: frt.cpp  frt.h
tapa/: BUILD.bazel  __init__.py  __main__.py  activate.sh  core.py  instance.py  nuitka_test.sh  requirements.in  requirements_lock.txt  safety_check.py  synthesis.py  tapav.py  task.py  task_test.py  util.py  util_test.py
tapa-cpp/: BUILD.bazel
tapa-lib/: BUILD.bazel  tapa.h
tapa-lib/tapa/: compat.h  compat_test.cpp  logging.h  scoped_log_sink_mock.h  scoped_set_env.h  stream.h  traits.h
tapa-llvm-project/: 0001-PATCH-Copy-files-from-bazel-overlay-to-root.patch  0002-PATCH-Bazel-Fix-bazel-build-files.patch  0003-PATCH-Fix-operator-overload-and-use-TEST_TMPDIR.patch  0004-PATCH-Disable-zlib-mpfr-and-terminfo.patch  0013-Disable-zlib-zstd-mpfr-and-pfm.patch  1001-Attr.td.patch  1002-Preprocessor.cpp.patch  1003-Preprocessor.h.patch  1004-PPDirectives.cpp.patch  1005-SemaDeclAttr.cpp.patch  1006-SemaStmtAttr.cpp.patch  BUILD.bazel
tapa-system-include/: BUILD.bazel
tapa/abgraph/: BUILD.bazel  __init__.py  ab_graph.py  gen_abgraph.py  slot_utilities.py
tapa/assets/: BUILD.bazel  __init__.py
tapa/backend/: BUILD.bazel  __init__.py  xilinx.py
tapa/common/: BUILD.bazel  __init__.py  base.py  constant.py  external_port.py  graph.py  interconnect_definition.py  interconnect_instance.py  paths.py  pyslang_rewriter.py  pyslang_rewriter_test.py  target.py  task_definition.py  task_instance.py  unique_attrs.py  unique_attrs_test.py
tapa/cosim/: BUILD.bazel  __main__.py  common.py  config_preprocess.py  tapa-fast-cosim.sh  templates.py  vivado.py
tapa/graphir/: BUILD.bazel  __init__.py
tapa/graphir_conversion/: BUILD.bazel  __init__.py  add_iface.py  gen_rs_graphir.py  leaf_task_conversion_test.py  slot_task_conversion_test.py  templates.py  top_task_conversion_test.py  utils.py
tapa/program/: BUILD.bazel  __init__.py  abc.py  directory.py  hls.py  pack.py  synthesis.py
tapa/steps/: BUILD.bazel  __init__.py  add_pipeline.py  add_top_passthrough.py  analyze.py  common.py  floorplan.py  gcc.py  link.py  meta.py  pack.py  synth.py  version.py
tapa/verilog/: BUILD.bazel  __init__.py  ast_types.py  ast_utils.py  axi_xbar.py  ioport.py  ioport_test.py  logic.py  parameter.py  pragma.py  signal.py  util.py  util_test.py  width.py
tapa_fast_cosim/: BUILD.bazel  common.py  config_preprocess.py  main.py  templates.py  vivado.py
tapacc/: BUILD.bazel  tapacc.cpp
tapacc/rewriter/: BUILD.bazel  mmap.cpp  mmap.h  stream.cpp  stream.h  task.cpp  task.h  type.cpp  type.h
(+1049 files in other folders)
